--- a/HomePage.html
+++ b/HomePage.html
@@ -1,41 +1,162 @@
 <!-- หน้าแรก -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Amon Home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-        <div class="container-fluid">
-          <a class="navbar-brand " href="#">Amon Store</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-xxl">
+        <a class="navbar-brand fs-3" href="#">Amon | Store</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">All Product</a>
+            </li>
+          </ul>
+          <button type="button" class="btn btn-primary ms-2 btn-w">
+            <svg
+              class="pb-1"
+              xmlns="http://www.w3.org/2000/svg"
+              width="27"
+              height="27"
+              fill="currentColor"
+              class="bi bi-cart2"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"
+              />
+            </svg>
           </button>
-          <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">All Product</a>
-              </li>
-            </ul>
-            <button type="button" class="btn btn-primary d-flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
-                    <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
-                </svg>
+        </div>
+      </div>
+    </nav>
+
+    <div class="content">
+      <div class="content-jumbotron container-xxl p-4 ">
+        <div class="p-5 mb-4 bg-body-tertiary rounded-3 bg-jumbo">
+          <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Amon | Store</h1>
+            <p class="col-md-8 fs-4">
+                Welcome to Amon Store, your <br>one-stop shop for high-quality<br> products at affordable prices. Explore<br> our latest collection and experience top-notch customer service today.
+            </p>
+            <button class="btn btn-primary btn-lg" type="button">
+              View All Product
             </button>
           </div>
         </div>
-      </nav>
+      </div>
+      <div class="container-fluid bg-dark py-3">
+        <div class="marquee">
+          <div class="marquee-content d-flex">
+            <span class="text-white mx-4 fs-1"><strong> AMON ECOMMERCE</strong></span>
+            <span class="text-white mx-4 fs-1">✦</span>
+            <span class="text-white mx-4 fs-1"><strong> AMON ECOMMERCE</strong></span>
+            <span class="text-white mx-4 fs-1">✦</span>
+            <span class="text-white mx-4 fs-1"><strong> AMON ECOMMERCE</strong></span>
+            <span class="text-white mx-4 fs-1">✦</span>
+            <span class="text-white mx-4 fs-1"><strong> AMON ECOMMERCE</strong></span>
+            <span class="text-white mx-4 fs-1">✦</span>
+            <span class="text-white mx-4 fs-1"><strong> AMON ECOMMERCE</strong></span>
+          </div>
+        </div>
+      </div>
 
+      <div class="container-xxl p-4">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./img/pexels-lastly-699122.jpg"
+                class="card-img-top card--img"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">Product1</p>
+                <p class="card-text">40.00 BATH</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./img/pexels-junior-teixeira-1064069-2047905.jpg"
+                class="card-img-top card--img"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">Product2</p>
+                <p class="card-text">40.00 BATH</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./img/pexels-gabriel-freytez-110599-341523.jpg"
+                class="card-img-top card--img"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">Product3</p>
+                <p class="card-text">40.00 BATH</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./img/pexels-jessbaileydesign-788946.jpg"
+                class="card-img-top card--img"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">Product4</p>
+                <p class="card-text">40.00 BATH</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+          <button class="btn btn-primary m-4 btn-lg">VIEW ALL</button>
+        </div>
+      </div>
+    </div>
 
-    <h1>Home Page!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <footer class="container-fluid bg-dark text-white py-3">
+      <div class="d-flex justify-content-center">
+        <p class="h2 m-0">AMON ECOMMERCE</p>
+      </div>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
