--- a/HomePage.html
+++ b/HomePage.html
@@ -31,10 +31,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="/HomePage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">All Product</a>
+              <a class="nav-link" href="/ProductPage.html">All Product</a>
             </li>
           </ul>
           <button type="button" class="btn btn-primary ms-2 btn-w">
