--- a/CartPage.html
+++ b/CartPage.html
@@ -1,2 +1,100 @@
-<!-- หน้าตะกร้าสินค้า -->
-<h1>Cart Page!</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Amon Product</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" />
+</head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-xxl">
+          <a class="navbar-brand fs-3" href="/HomePage.html">Amon | Store</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/HomePage.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/ProductPage.html">All Product</a>
+              </li>
+            </ul>
+            <a href="/CartPage.html"><button type="button" class="btn btn-primary ms-2 btn-w" href="/CartPage.html">
+              <svg
+                class="pb-1"
+                xmlns="http://www.w3.org/2000/svg"
+                width="27"
+                height="27"
+                fill="currentColor"
+                class="bi bi-cart2"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"
+                />
+              </svg>
+            </button></a>
+          </div>
+        </div>
+      </nav>
+
+      <div class="content container-xxl">
+        <div class="content-jumbotron container-xxl p-4 ">
+            <h1>Cart</h1>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="cart-items"></div>
+        <div class="d-flex justify-content-end mt-4">
+            <button class="btn btn-success">Checkout</button>
+          </div>
+      </div>
+
+      <script>
+        // แสดงสินค้าที่เพิ่มเข้ามา
+        function displayCartItems() {
+          const cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+          const cartContainer = document.getElementById('cart-items');
+          cartContainer.innerHTML = ''; // เคลียร์ตะกร้าเก่าออกก่อน
+          cartItems.forEach(item => {
+            const itemCol = document.createElement('div');
+            itemCol.classList.add('col');
+            itemCol.innerHTML = `
+              <div class="card" style="width: 18rem">
+                <img src="${item.image}" class="card-img-top" alt="${item.name}" />
+                <div class="card-body">
+                  <p class="card-text">${item.name}</p>
+                  <p class="card-text">Price: ${item.price} BATH</p>
+                  <p class="card-text">Quantity: ${item.quantity}</p>
+                  <button class="btn btn-danger" onclick="removeFromCart(${item.id})">Remove</button>
+                </div>
+              </div>
+            `;
+            cartContainer.appendChild(itemCol);
+          });
+        }
+  
+        // ลบสินค้าออกจากตะกร้า
+        function removeFromCart(productId) {
+          let cart = JSON.parse(localStorage.getItem('cart')) || [];
+          cart = cart.filter(item => item.id !== productId);
+          localStorage.setItem('cart', JSON.stringify(cart));
+          displayCartItems();
+        }
+
+        displayCartItems();
+      </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
