--- a/HomePage.html
+++ b/HomePage.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-xxl">
-        <a class="navbar-brand fs-3" href="#">Amon | Store</a>
+        <a class="navbar-brand fs-3" href="/HomePage.html">Amon | Store</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,7 +37,7 @@
               <a class="nav-link" href="/ProductPage.html">All Product</a>
             </li>
           </ul>
-          <button type="button" class="btn btn-primary ms-2 btn-w">
+          <a href="/CartPage.html"><button type="button" class="btn btn-primary ms-2 btn-w" href="/CartPage.html">
             <svg
               class="pb-1"
               xmlns="http://www.w3.org/2000/svg"
@@ -51,7 +51,7 @@
                 d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"
               />
             </svg>
-          </button>
+          </button></a>
         </div>
       </div>
     </nav>
@@ -142,7 +142,7 @@
           </div>
         </div>
         <div class="col-12 d-flex justify-content-center">
-          <button class="btn btn-primary m-4 btn-lg">VIEW ALL</button>
+          <a href="/ProductPage.html"><button class="btn btn-primary m-4 btn-lg">VIEW ALL</button></a>
         </div>
       </div>
     </div>
