--- a/CartPage.html
+++ b/CartPage.html
@@ -56,7 +56,7 @@
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="cart-items"></div>
         <div class="d-flex justify-content-end mt-4">
-            <button class="btn btn-success">Checkout</button>
+            <a href="/CheckoutPage.html"><button class="btn btn-success" >Checkout</button></a>
           </div>
       </div>
 
