--- a/ProductPage.html
+++ b/ProductPage.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-xxl">
-          <a class="navbar-brand fs-3" href="/HomePage.html">Amon | Store</a>
+          <a class="navbar-brand fs-3" href="/index.html">Amon | Store</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/HomePage.html">Home</a>
+                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/ProductPage.html">All Product</a>
